--- a/src/style/modules/_forms.scss
+++ b/src/style/modules/_forms.scss
@@ -1,92 +1,87 @@
-
 //all forms
-.new-task{
+.new-task {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.new-task-parent {
+  @include panels(100px, $white, false);
+  padding: 1rem 0.1rem 1rem 0.1rem;
+  max-width: 450px;
+  flex: 1;
+
+  .new-task-container {
+    display: flex;
+    width: 100%;
+
+    div {
+      flex: 1;
+      padding: 0 0.4rem 0 0.4rem;
+    }
+  }
+  .new-task-submit {
+    width: 100%;
     display: flex;
     justify-content: center;
-    width: 100%;
+    margin-top: 1rem;
+    padding: 0 0.4rem 0 0.4rem;
+  }
 }
 
-.new-task-parent{
-    @include panels(100px,$white,false);
-    padding: 1rem .1rem 1rem .1rem;
-    max-width: 450px;
-    flex: 1;
-   
-   
-    .new-task-container{
-        display: flex;
-        width: 100%;
-      
-        div{
-            flex:1;
-            padding: 0 .4rem 0 .4rem;
-           
-            
-            
-        }
-    }
-    .new-task-submit{
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        margin-top: 1rem;
-        padding: 0 .4rem 0 .4rem;
-    }
+select {
+  width: 100%;
+  height: 40px;
+  border: none;
+  background-color: rgb(235, 235, 235);
+  font-size: 100%;
 }
 
-
-
-
-
-select{
-    width: 100%;
-    height: 40px;
-    border: none;
-    background-color:rgb(235, 235, 235);  
-    font-size:100%;
- }
-
-
-.mini-forms{
-
-    @include panels(200px,$white,1rem,250px);
-    .form-btns{
-        display: flex;
-        justify-content: space-between;
-        
+.mini-forms {
+  @include panels(200px, $white, 1rem, 250px);
+  .form-btns {
+    display: flex;
+    justify-content: space-between;
+    .div-btn {
+      @include a_button($white, 40px, $panel, 15px, 4px, 1);
     }
-    .form-input{
-        margin-bottom: 1rem;
+    .cancel {
+      @include a_button($white, 40px, $danger, 15px, 4px, 1);
     }
+  }
+  .form-input {
+    margin-bottom: 1rem;
+  }
 }
 
-input[type="text"],input[type="email"],input[type="password"]{
-    width: 100%;
-    display: inline-block;
-    margin: 0 auto;
-    padding: 12px 8px;
-    border-radius: 4px;
-    border: none;
-    box-sizing: border-box;
-    outline: none;
-    font-size:100%;
-    background-color: rgb(235, 235, 235);       
-    transition: all 0.4s ease-in-out;
+input[type="text"],
+input[type="email"],
+input[type="password"] {
+  width: 100%;
+  display: inline-block;
+  margin: 0 auto;
+  padding: 12px 8px;
+  border-radius: 4px;
+  border: none;
+  box-sizing: border-box;
+  outline: none;
+  font-size: 100%;
+  background-color: rgb(235, 235, 235);
+  transition: all 0.4s ease-in-out;
 }
 
-input[type="submit"]{
-  @include button($white,35px,100%,$panel,15px,3px);
+input[type="submit"] {
+  @include button($white, 35px, 100%, $panel, 15px, 3px);
   cursor: pointer;
-  margin-right:1rem;
-  &:hover{
-      background-color: $button-main;
+  margin-right: 1rem;
+  &:hover {
+    background-color: $button-main;
   }
- 
 }
-input[type="button"]{
-    @include button($white,35px,90%,$danger,15px,3px);
-  }
+input[type="button"] {
+  @include button($white, 35px, 90%, $danger, 15px, 3px);
+}
 
-  .form-field{
-      margin-bottom: .8rem;
-  }
+.form-field {
+  margin-bottom: 0.8rem;
+}
